# PaxosDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp-ci.yml
application/: main.cpp
include/: NonCopyable.hpp  network.hpp  node.hpp  option.hpp
src/: paxos_server.cpp  paxos_server.hpp
src/network/: DFNetwork.cpp  DFNetwork.hpp  concurrent.cpp  concurrent.hpp  network.cpp  udp.cpp  udp.hpp
src/node/: node.cpp  pnode.cpp  pnode.hpp
